supporting 2 facebook applicaiton

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
 <h1 id="header">Facebook: <strong>Post</strong></h1>
-<div style="text-align:center;"><button id="digest-login" onclick="location.href = 'http://localhost:8180/digestauth';">LOGIN TO Rockon</button>
+<div style="text-align:center;"><button id="digest-login" onclick="location.href = 'http://192.168.6.148:8180/digestauth';">LOGIN TO Rockon</button>
 
 </div>
 
