--- a/facebook.html
+++ b/facebook.html
@@ -39,7 +39,85 @@
             }
         });
     }
+    var feedconvert = function () {
 
+        var inputfeed = $("#inputfeed").val();
+        var output = [];
+        var jsonfeed = JSON.parse(inputfeed);
+        if (jsonfeed.status_type == 'mobile_status_update') {
+            alert("sd");
+            output.push(jsonfeed.id);
+            output.push(jsonfeed.from.id);
+            output.push("");
+            output.push(jsonfeed.from.name);
+            output.push(jsonfeed.updated_time);
+            output.push(jsonfeed.message);
+            output.push(jsonfeed.likes.data.length);
+            output.push("");
+            output.push(jsonfeed.comments.data.length);
+            output.push(jsonfeed.updated_time);
+            alert("array populated");
+            $("#outputfeed").html(output);
+        }
+        else if (jsonfeed.type == 'status' && jsonfeed.status_type == undefined) {
+            alert("status parse begin");
+            output.push(jsonfeed.id);
+            output.push(jsonfeed.from.id);
+            output.push("");
+            output.push(jsonfeed.from.name);
+            output.push(jsonfeed.updated_time);
+            alert("status parse middle");
+            output.push(jsonfeed.story);
+            output.push(jsonfeed.likes.data.length);
+            output.push("");
+            output.push(jsonfeed.comments.data.length);
+            output.push(jsonfeed.updated_time);
+            alert("array populated");
+            $("#outputfeed").html(output);
+        }
+        else if (jsonfeed.status_type == 'shared_story') {
+            output.push(jsonfeed.id);
+            output.push(jsonfeed.from.id);
+            output.push("");
+            output.push(jsonfeed.from.name);
+            output.push(jsonfeed.updated_time);
+            output.push("story title:" + jsonfeed.story + ", picture: " + jsonfeed.picture + ", caption: " + jsonfeed.caption);
+            output.push(jsonfeed.action.likes.data.length);
+            output.push("");
+            output.push(jsonfeed.comments.data.length);
+            output.push(jsonfeed.updated_time);
+            alert("array populated");
+            $("#outputfeed").html(output);
+        }
+        else if (jsonfeed.status_type == 'tagged_in_photo') {
+            output.push(jsonfeed.id);
+            output.push(jsonfeed.from.id);
+            output.push("");
+            output.push(jsonfeed.from.name);
+            output.push(jsonfeed.updated_time);
+            output.push(jsonfeed.message);
+            output.push(jsonfeed.likes.data.length);
+            output.push("");
+            output.push(jsonfeed.comments.data.length);
+            output.push(jsonfeed.updated_time);
+            alert("array populated");
+            $("#outputfeed").html(output);
+        }
+        else if (jsonfeed.status_type == 'added_photos') {
+            output.push(jsonfeed.id);
+            output.push(jsonfeed.from.id);
+            output.push("");
+            output.push(jsonfeed.from.name);
+            output.push(jsonfeed.updated_time);
+            output.push(jsonfeed.message);
+            output.push(jsonfeed.likes.data.length);
+            output.push("");
+            output.push(jsonfeed.comments.data.length);
+            output.push(jsonfeed.updated_time);
+            alert("array populated");
+            $("#outputfeed").html(output);
+        }
+    }
 
     var fbGetHomeFeeds = function () {
         var a = 0;
@@ -68,7 +146,7 @@
             }
         });
     }
-
+    
 
 </script>  
   
@@ -85,9 +163,11 @@
 <button id="Share" onclick="fbshare()">Share</button>
 <button id="GetProfile" onclick="fbGetProfile()">GetProfile</button>
 
-<div id='Homefeeds' style="text-align:center;>
-<textarea rows="50" id='homefeeds'  ></textarea>
+<div id='Homefeeds' style="text-align:center">
 
+<textarea rows="50" cols ="30"  id='inputfeed'   ></textarea>
+<button id="btnconvert"  onclick="feedconvert()">convert</button>
+<textarea rows="50" cols ="30"  id='outputfeed'   >sndkfjnsdlfkmsd</textarea>
 </div>
 
 </div>
