--- a/facebook.html
+++ b/facebook.html
@@ -42,7 +42,7 @@
     var fbGetComments = function () {
         $.ajax({
             type: "GET",
-            url: "/fbgetComments",
+            url: "/fbgetReplies",
             contentType: "application/json; charset=utf-8",
             dataType: "json",
             success: function (response) {
