--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
 </head>
 <body>
 <h1 id="header">Facebook: <strong>Post</strong></h1>
-<div style="text-align:center;"><button id="digest-login" onclick="location.href = 'http://localhost:8180/digestauth';">LOGIN TO Rockon</button>
+<div style="text-align:center;"><button id="digest-login" onclick="location.href = 'http://localhost:8180/digestauth';">LOGIN TO FACEBOOK</button>
 
 </div>
-
-
 </body>
 </html>
